kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: verifywise
  labels:
    name: verifywise
    app: verifywise
